--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "rendercrank",
   "version": "1.0.0",
   "description": "Unopinionated 2D WebGL Renderer",
+  "main": "build/src/index.js",
   "browser": "build/rendercrank.production.js",
   "repository": "https://github.com/laino/rendercrank",
   "author": "Nils Kuhnhenn",
   "license": "MIT",
   "scripts": {
       "watch": "NODE_ENV=development yarn webpack --watch",
-      "build": "yarn build-types && yarn build-webpack && yarn build-examples",
+      "build": "yarn build-tsc && yarn build-tsc-examples && yarn build-webpack",
       "build-webpack": "NODE_ENV=production yarn webpack && NODE_ENV=development yarn webpack",
-      "build-types": "yarn tsc --declaration --emitDeclarationOnly --outFile index.js",
-      "build-examples": "tsc --build examples/tsconfig.json"
+      "build-tsc": "yarn tsc --build tsconfig.json",
+      "build-tsc-examples": "tsc --build examples/tsconfig.json"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.2",
