--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "include": [
-      "lib/**/*.ts",
-      "index.ts"
+    "lib/**/*.ts",
+    "index.ts"
   ],
   "exclude": [
     "examples",
@@ -9,11 +9,15 @@
     "**/node_modules/*"
   ],
   "compilerOptions": {
+    "lib": [
+      "esnext",
+      "dom"
+    ],
     "outDir": "build/src",
     "sourceMap": true,
     "composite": true,
     "declaration": true,
-    "module": "es6",
+    "module": "esnext",
     "target": "es5",
     "moduleResolution": "node",
     "downlevelIteration": true
