asynchronous shader/program compiling/linking, VAO re-use wip

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -1,5 +1,8 @@
 {
-  "include": ["**/*.ts"],
+  "include": [
+    "**/*.ts",
+    "../global.d.ts"
+  ],
   "references": [
     { "path": "../" }
   ],
