--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,15 +7,13 @@
     "node": true
   },
   "extends": [
-    "eslint:recommended"
+    "eslint:recommended",
+    "plugin:import/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": 8,
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
   "overrides": [
     {
       "files": [
@@ -24,7 +22,9 @@
       "parser": "@typescript-eslint/parser",
       "extends": [
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended",
+        "plugin:import/recommended",
+        "plugin:import/typescript"
       ],
       "rules": {
         "no-undef": "off",
@@ -62,7 +62,29 @@
         ],
         "@typescript-eslint/no-use-before-define": "off",
         "no-use-before-define": "off",
-        "@typescript-eslint/prefer-interface": "off"
+        "@typescript-eslint/prefer-interface": "off",
+        "@typescript-eslint/naming-convention": ["warn", [{
+            "selector": "default",
+            "format": ["camelCase"],
+            "leadingUnderscore": "allow",
+            "trailingUnderscore": "allow"
+          },
+          {
+            "selector": "default",
+            "format": ["camelCase", "UPPER_CASE"],
+            "leadingUnderscore": "allow",
+            "trailingUnderscore": "allow"
+          },
+          {
+            "selector": "enumMember",
+            "format": ["UPPER_CASE"]
+          },
+          {
+            "selector": "typeLike",
+            "format": ["PascalCase"]
+          }]
+        ],
+        "camelcase": "off"
       }
     }
   ],
