--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "author": "Nils Kuhnhenn",
   "license": "MIT",
   "scripts": {
-      "watch": "NODE_ENV=development yarn webpack --watch",
-      "build": "yarn build-tsc && yarn build-tsc-examples && yarn build-webpack",
-      "build-webpack": "NODE_ENV=production yarn webpack && NODE_ENV=development yarn webpack",
-      "build-tsc": "yarn tsc --build tsconfig.json",
-      "build-tsc-examples": "tsc --build examples/tsconfig.json"
+    "watch": "NODE_ENV=development yarn webpack --watch",
+    "build": "yarn build-tsc && yarn build-tsc-examples && yarn build-webpack",
+    "build-webpack": "NODE_ENV=production yarn webpack && NODE_ENV=development yarn webpack",
+    "build-tsc": "yarn tsc --build tsconfig.json && cp global.d.ts build/src",
+    "build-tsc-examples": "tsc --build examples/tsconfig.json"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.2",
@@ -22,5 +22,8 @@
     "typescript": "^4.3.5",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "eslint-plugin-import": "^2.24.1"
   }
 }
